[Fix] -> No comment spacing and border added.

--- a/assets/css/unminified/skin-1.css
+++ b/assets/css/unminified/skin-1.css
@@ -328,8 +328,10 @@
 }
 
 .comments-area .no-comments {
-  margin-top: 0.5em;
+  margin-top: 2.250em;
   margin-bottom: 0.5em;
+  border-top: 1px solid #eaeaea;
+  padding-top: 2.250em;
 }
 
 .comments-area p.logged-in-as {
