--- a/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
@@ -215,8 +215,10 @@
     
 
     .no-comments {
-        margin-top: 0.5em;
+        margin-top: 2.250em;
         margin-bottom: 0.5em;
+        border-top: 1px solid #eaeaea;
+        padding-top: 2.250em;
     }
 
     p.logged-in-as {
